solebuy/static/styles/top_nav.css
.top-nav {
    width: 100vw;
    min-height: 55px;
    display: flex;
    flex-direction: column;
}

.top-nav .primary {
    width: 100%;
    height: 55px;
    z-index: 1;
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: rgb(17, 17, 17);
    overflow: hidden;
}

.top-nav .primary h1 {
    position: absolute;
    left: 0;

    margin-left: 10px;
    font-size: 18px;
    font-weight: normal;
    color: rgb(255, 255, 255);
    cursor: pointer;
}

.top-nav .primary h1:hover {
    color: rgb(238, 238, 238);
}

.top-nav .primary .logo {
    display: flex;
}

.top-nav .primary .logo a {
    text-decoration: none;
}

.top-nav .primary .logo j {
    position: relative;

    font-size: 21px;
    vertical-align: middle;
    color: rgb(255, 255, 255);
}

.top-nav .primary .logo j:hover {
    color: rgb(238, 238, 238);
}

.top-nav .primary .logo img {
    position: relative;
    width: 20px;
    height: 20px;

    padding-left: 5px;
    vertical-align: middle;
}

.top-nav .primary .links {
    position: absolute;
    right: 0;

    margin-right: 10px;
}

.top-nav .primary .links a {
    margin-left: 10px;
    font-size: 18px;
    color: rgb(255, 255, 255);
    text-decoration: none;
}

.top-nav .primary .links a:hover {
    color: rgb(238, 238, 238);
}

.top-nav .category-bar {
    position: relative;
    top: 0px;
    width: 100%;
    display: none;
    justify-content: center;
    align-items: center;

    text-align: center;
    background-color: rgb(17, 17, 17);
}

.top-nav .category-bar .category {
    position: relative;
    display: inline-block;

    margin: 10px 50px 10px 50px;
}

.top-nav .category-bar .category img {
    width: 60px;
    height: 60px;
}

.top-nav .category-bar .category h1 {
    margin: 5px 0px 0px 0px;
    font-size: 16px;
    color: rgb(255, 255, 255);
    font-weight: normal;
}

.top-nav .category-bar .category h3:hover {
    color: rgb(34, 34, 34);
}

@media only screen and (max-width: 580px) {
    .top-nav .primary .links {
        display: none;
    }
}

